--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
          <h2 id="mensagemErro" class="mensagemErro"></h2> 
-        <script src="/js/script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 
